# WeatherGenerator

./: .gitignore  CODING_STANDARDS.md  INSTALL.md  NOTICE  README.md  dashboard  evaluate.py  profile.txt  profileall.txt  pyprof.txt  pyprof_dw3acg5s.txt  pyproject.toml  slurm_weathergen.sh  test_run.txt  train.py  uv_test.toml  works.diff
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
HPC_Scripts/: weathergen_evaluate_lint.sh  weathergen_evaluate_lint.sh.11580318.err  weathergen_evaluate_lint.sh.11580321.err  weathergen_train_lint.sh  weathergen_train_lint.sh.11580322.err
config/: cams_eac4_config.yml  cams_eac4_config_test.yml  compare_config_list.yml  config_default.yml  config_era5_split_causal.yml  config_era5_split_combine_diff_per_stream.yml  config_era5_split_combine_same_per_stream.yml  config_era5_split_forecast.yml  config_era5_split_perchannel.yml  config_era5_split_random.yml  config_eval.yml  config_mwvs_causal.yml  config_mwvs_combine_diff_per_stream.yml  config_mwvs_combine_same_per_stream.yml  config_mwvs_forecast.yml  config_mwvs_perchannel.yml  config_mwvs_random.yml  config_pretrain_era5+imerg.yml  config_radklim.yml  default_config.yml  default_config_atos.yml  default_config_changed.yml  default_config_channel_02_global.yml  default_config_channel_02_percell.yml  default_config_channel_04_global.yml  default_config_channel_04_percell.yml  default_config_channel_06_global.yml  default_config_channel_06_percell.yml  default_config_channel_08_global.yml  default_config_channel_08_percell.yml  default_config_diff.yml  default_config_finetuning.yml  default_config_gmm.yml  default_config_gmm_latent_noise.yml  default_config_healpix_02_ml_1.yml  default_config_healpix_02_ml_3.yml  default_config_healpix_04_ml_1.yml  default_config_healpix_04_ml_3.yml  default_config_healpix_06_ml_1.yml  (+31 more)
dashboard/: README.md  a_overview.py  atmo_training.py  b_data.py  dashboard.py  data_overview.py  eng_overview.py  pyproject.toml
dashboard/weathergen/dashboard/: metrics.py
(+347 files in other folders)
