[project]
name = "weathergen"
version = "0.1.0"
description = "The WeatherGenerator Machine Learning Earth System Model"
readme = "README.md"
authors = [
    { name = "WeatherGenerator collaboration" }
]

requires-python = ">=3.11,<3.13"
# TODO: split the plotting dependencies into their own dep groups, they are not required.
dependencies = [ 'torch',
                 'numpy',
                 'astropy_healpix',
                 'zarr',
                 'anemoi-datasets',
                 'pandas',
                 'pynvml',
                 'tqdm',
                 'matplotlib',
                 'packaging',
                 'wheel',
                 'psutil']

[project.urls]
Homepage = "https://www.weathergenerator.eu"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/ecmwf/WeatherGenerator.git"
Issues = "https://github.com/ecmwf/WeatherGenerator/issues"

[project.scripts]
train = "weathergen:train"
evaluate = "weathergen:evaluate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
# The development dependencies
dev = [
  "pytest",
  "ruff==0.9.7"
]


# The linting configuration
[tool.ruff]

# Wide rows
line-length = 120

[tool.ruff.lint]
# All disabled until the code is formatted.
select = [
    # pycodestyle
    # "E",
    # Pyflakes
    # "F",
    # pyupgrade
    # "UP",
    # flake8-bugbear
    # "B",
    # flake8-simplify
    # "SIM",
    # isort
    # "I",
]
ignore = [

]