[project]
name = "weathergen-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "boto3<1.36",
#    "mlflow-skinny>=3.3.2",
    "mlflow~=3.3.2",
    "plotly~=6.1.2",
    "polars~=1.30.0",
    "requests~=2.32.4",
#    "simple-cache>=0.35",
    "streamlit>=1.46.0",
    "streamlit-authenticator>=0.4.2",
    "watchdog",
]
